--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="ui container">
   <div class="ui secondary pointing menu">
     <a routerLink="/elements" routerLinkActive="active" class="item"
-      >elemnts
+      >elements
     </a>
     <a routerLink="/collections" routerLinkActive="active" class="item"
       >Collections</a
