Added Shared Module

--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -1,3 +1,2 @@
-<h1>Placeholder Component</h1>
-<hr />
-<app-placeholder [header]="true" [lines]="5"></app-placeholder>
+<app-divider> Placeholder Component </app-divider>
+<app-placeholder [header]="true" [lines]="3"></app-placeholder>
