--- a/src/app/collections/collections-home/collections-home.component.html
+++ b/src/app/collections/collections-home/collections-home.component.html
@@ -1,3 +1,7 @@
 <app-divider>Table Component</app-divider>
 
-<app-table [data]="data" [headers]="headers"></app-table>
+<app-table
+  classNames="striped celled"
+  [data]="data"
+  [headers]="headers"
+></app-table>
