--- a/src/app/mods/mods-home/mods-home.component.html
+++ b/src/app/mods/mods-home/mods-home.component.html
@@ -1,1 +1,3 @@
-<p>mods-home works!</p>
+<app-divider>Modal Component</app-divider>
+<button class="ui button" (click)="toggleModal()">Open Model</button>
+<app-modal (close)="toggleModal()" *ngIf="modalOpen"></app-modal>
