--- a/src/app/mods/mods-home/mods-home.component.html
+++ b/src/app/mods/mods-home/mods-home.component.html
@@ -8,3 +8,6 @@
     <button class="ui button" (click)="toggleModal()">Ok</button>
   </ng-container>
 </app-modal>
+
+<app-divider>Accordion Component</app-divider>
+<app-accordion [items]="items"></app-accordion>
